# chip8

./: CMakeLists.txt
disassembler/: disassembler.cpp
src/: boundedstack.hpp  cpu.hpp  decode.hpp  font.hpp  instructions.hpp  main.cpp  random.hpp
test/: test_boundedstack.cpp  test_instructions.cpp
